--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,13 @@ services:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=secret
       - POSTGRES_DB=simple_bank
+    ports:
+      - "5432:5432"
+    volumes:
+      - data-volume:/var/lib/postgresql/data
+
+  redis:
+    image: redis:7-alpine
 
   api:
     build:
@@ -13,10 +20,18 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+      - "9090:9090"
+
     environment:
+    # 对程序中原先使用的变量名进行了覆盖，在 docker-compose.yaml 中不使用本地地址，使用容器名
+    # 如果依旧使用本地地址，那访问的是本机上的端口，而不是这个容器集群的端口
       - DB_SOURCE=postgresql://root:secret@postgres:5432/simple_bank?sslmode=disable
+      - REDIS——ADDRESS=redis:6379
     depends_on:
       - postgres
+      - redis
     entrypoint: ["/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
     command: ["/app/main"]
 
+volumes:
+  data-volume:
